--- a/SampleCheck.ipynb
+++ b/SampleCheck.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPYWx2YrXtPODfeVwo60RZ4",
+      "authorship_tag": "ABX9TyO6biBZExkAryEq77QQj9c9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -47,6 +47,29 @@
       ],
       "source": [
         "print(23)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(25)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Qlno1NMXRCOa",
+        "outputId": "449dec52-32fc-408c-dfe0-1dc0107d1bee"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "25\n"
+          ]
+        }
       ]
     }
   ]
